exports[`borderWidth properly applies a value when passed only one 1`] = `
Object {
  "borderBottomWidth": "12px",
  "borderLeftWidth": "12px",
  "borderRightWidth": "12px",
  "borderTopWidth": "12px",
}
`;

exports[`borderWidth properly applies values when passed four 1`] = `
Object {
  "borderBottomWidth": "36px",
  "borderLeftWidth": "48px",
  "borderRightWidth": "24px",
  "borderTopWidth": "12px",
}
`;

exports[`borderWidth properly applies values when passed three 1`] = `
Object {
  "borderBottomWidth": "36px",
  "borderLeftWidth": "24px",
  "borderRightWidth": "24px",
  "borderTopWidth": "12px",
}
`;

exports[`borderWidth properly applies values when passed two 1`] = `
Object {
  "borderBottomWidth": "12px",
  "borderLeftWidth": "24px",
  "borderRightWidth": "24px",
  "borderTopWidth": "12px",
}
`;
